tests/init/neg/freedom/tolerant-boundary/child_2.scala
class Child extends Base {
  val x = a + foo           // don't report error cross boundary
}